objects/WT_Employee__c.object
<CustomObject>
    <description>This object is used to store Wintrust Employee Details</description>
    <fields>
        <fullName>WT_Bank__c</fullName>
        <label>Bank #</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>WT_Fusion_Feed_Bank</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Branch__c</fullName>
        <label>Branch #</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>WT_Fusion_Feed_Branch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Charter__c</fullName>
        <description>Charter of the Employee</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Charter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Division__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WT_Employee_ID__c</fullName>
        <description>Created as part of DBSFCRM-47</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Employee_Status__c</fullName>
        <label>Employee Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Location_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Middle_Initial__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Initial</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_User_Exist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Exist</label>
        <type>Checkbox</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Non_Active_Employees</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WT_Employee_Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Non Active Employees</label>
    </listViews>
    <listViews>
        <fullName>Non_Active_MB</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>WT_Employee_Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Non Active MB</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>